--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "overrides": {
+    "vue": "latest"
+  },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
     "@kevinmarrec/nuxt-pwa": "^0.17.0",
@@ -18,7 +21,9 @@
     "vuetify": "^3.3.19"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.11.8",
+    "pinia": "^2.1.7",
     "vee-validate": "^4.11.8",
     "vite-plugin-vuetify": "^1.0.2",
     "vue3-persian-datetime-picker": "^1.2.2"
