--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/devtools": "^0.8.5",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@sidebase/nuxt-pdf": "^0.1.2",
+    "@vite-pwa/nuxt": "^0.4.0",
     "nuxt": "3.7.4",
     "sass": "^1.68.0",
     "vuetify": "^3.3.19"
